--- a/index.html
+++ b/index.html
@@ -101,13 +101,25 @@
 
         </section>
     </main>
-    <footer>
-        <div>
+    <footer class="footer">
+        <div class="footer-content">
             <p>44, Big Building Roosevelt Street <br>Beach Gardens Florida 33410</p>
-            
+            <div>
+                <p>+00 123 584 124</p>
+                <p>www.website.com</p>
+            </div>
+
         </div>
-        <div></div>
-        <div></div>
+        <div class="socile">
+            <img src="icons/Facebook.png" alt="">
+            <img src="icons/Instagram.png" alt="">
+            <img src="icons/Linkedin.png" alt="">
+            <img src="icons/Twitter.png" alt="">
+        </div>
+        <div class="Unsubscribe">
+            <p>2017, All Rights Reserved.</p>
+            <p>Unsubscribe</p>
+        </div>
     </footer>
 
 </body>
